load("@aspect_rules_js//npm:defs.bzl", "npm_package")
load("@aspect_rules_ts//ts:defs.bzl", "ts_config", "ts_project")

ts_config(
    name = "tsconfig",
    src = "tsconfig.json",
    visibility = [":__subpackages__"],
)

ts_project(
    name = "lib",
    srcs = ["index.ts"],
    data = [
        # Also propagate the date-fns npm package downstream so it is an runtime dependency
        # of any linked npm_package that this target is used by.
        "//examples:node_modules/date-fns",
    ],
    declaration = True,
    deps = [
        "//examples:node_modules/date-fns",
        "//examples/deps_pkg/b",
    ],
)

npm_package(
    name = "pkg",
    srcs = [
        ":lib",
    ],
    package = "@myorg/deps_pkg",
    visibility = ["//examples:__subpackages__"],
)

ts_project(
    name = "importer_rel_ts",
    srcs = ["importer_rel.ts"],
    declaration = True,
    deps = [
        ":lib",
    ],
)

ts_project(
    name = "importer_linked_ts",
    srcs = ["importer_linked.ts"],
    declaration = True,
    deps = [
        "//examples:node_modules/@myorg/deps_pkg",
    ],
)
